# libbitcoin-blockchain

./: .appveyor.yml  .gitignore  .travis.yml  AUTHORS  ChangeLog  Doxyfile  HACKING  INSTALL  Makefile.am  README  README.md  appveyor.yml  autogen.sh  build.cmd  configure.ac  install-cmake.sh  install-cmakepresets.sh  install-libbitcoin-blockchain.sh  install.sh  libbitcoin-blockchain-test_runner.sh  libbitcoin-blockchain.pc.in  libbitcoin_blockchain.pc.in  libbitcoin_blockchain_test_runner.sh  libblockchain.pc.in
include/bitcoin/: Makefile.am  blockchain.hpp
include/bitcoin/blockchain/: block.hpp  block_chain.hpp  block_chain_impl.hpp  block_chain_initializer.hpp  block_detail.hpp  block_fetcher.hpp  block_info.hpp  block_locator_fetcher.hpp  block_validator.hpp  blockchain.hpp  blockchain_impl.hpp  checkpoint.hpp  checkpoints.hpp  database.hpp  db_interface.hpp  define.hpp  error.hpp  fetch_block.hpp  fetch_block_locator.hpp  full_chain.hpp  genesis_block.hpp  history_row.hpp  organizer.hpp  organizer_impl.hpp  orphan_pool.hpp  orphan_pool_manager.hpp  orphans_pool.hpp  pointer_array_source.hpp  prioritized_mutex.hpp  settings.hpp  simple_chain.hpp  stealth_row.hpp  transaction_pool.hpp  transaction_pool_index.hpp  validate.hpp  validate_block.hpp  validate_block_impl.hpp  validate_transaction.hpp  version.hpp
include/bitcoin/blockchain/database/: block_database.hpp  data_base.hpp  database.hpp  database_settings.hpp  disk_array.hpp  fsizes.hpp  hdb_shard.hpp  history_database.hpp  history_scan_database.hpp  hsdb_settings.hpp  hsdb_shard.hpp  htdb_record.hpp  htdb_slab.hpp  linked_records.hpp  mmfile.hpp  multimap_records.hpp  pointer_array_source.hpp  record_allocator.hpp  sizes.hpp  slab_allocator.hpp  spend_database.hpp  stealth_database.hpp  transaction_database.hpp  types.hpp  util.hpp  utility.hpp
include/bitcoin/blockchain/impl/: disk_array.ipp  htdb_record.ipp  htdb_record_list_item.ipp  htdb_slab.ipp  htdb_slab_list_item.ipp  multimap_records.ipp  remainder.ipp  utility.ipp
include/bitcoin/blockchain/implementation/: block_chain_impl.hpp  blockchain_impl.hpp  organizer_impl.hpp  simple_chain_impl.hpp  validate_block_impl.hpp
include/bitcoin/blockchain/interface/: block_chain.hpp  block_fetcher.hpp  fast_chain.hpp  full_chain.hpp  safe_chain.hpp  simple_chain.hpp
include/bitcoin/blockchain/organizers/: block_organizer.hpp  header_organizer.hpp  organize_block.hpp  organize_header.hpp  organize_transaction.hpp  transaction_organizer.hpp
include/bitcoin/blockchain/pools/: anchor_converter.hpp  block_entry.hpp  block_graph.hpp  block_organizer.hpp  block_pool.hpp  branch.hpp  child_closure_calculator.hpp  conflicting_spend_remover.hpp  header_branch.hpp  header_entry.hpp  header_pool.hpp  organizer.hpp  orphan_pool.hpp  (+10 more)
src/: Makefile.am  block.cpp  block_chain.cpp  block_chain_impl.cpp  block_chain_initializer.cpp  block_detail.cpp  block_fetcher.cpp  block_locator_fetcher.cpp  block_validator.cpp  blockchain.cpp  checkpoint.cpp  checkpoints.cpp  database.cpp  db_interface.cpp  error.cpp  fetch_block.cpp  fetch_block_locator.cpp  genesis_block.cpp  organizer.cpp  orphan_pool.cpp  orphan_pool_manager.cpp  orphans_pool.cpp  prioritized_mutex.cpp  settings.cpp  transaction_pool.cpp  transaction_pool_index.cpp  validate.cpp  validate_block.cpp  validate_block_impl.cpp  validate_transaction.cpp
src/database/: block_database.cpp  data_base.cpp  database_settings.cpp  hdb_shard.cpp  history_database.cpp  history_scan_database.cpp  hsdb_settings.cpp  hsdb_shard.cpp  linked_records.cpp  mmfile.cpp  multimap_records.cpp  record_allocator.cpp  slab_allocator.cpp  spend_database.cpp  stealth_database.cpp  transaction_database.cpp  util.cpp  utility.cpp
src/database/database/: block_database.cpp  history_database.cpp  spend_database.cpp  stealth_database.cpp  transaction_database.cpp
src/database/disk/: mmfile.cpp
src/database/mman-win32/: mman.c  mman.h
src/database/record/: linked_records.cpp  multimap_records.cpp  record_allocator.cpp
src/database/slab/: slab_allocator.cpp
src/impl/: blockchain_common.cpp  blockchain_common.hpp  blockchain_impl.cpp  chain_keeper_impl.cpp  chain_keeper_impl.hpp  fetch_history.hpp  fetch_history.ipp  organizer_impl.cpp  organizer_impl.hpp  simple_chain_impl.cpp  simple_chain_impl.hpp  validate_block_impl.cpp  validate_block_impl.hpp
src/implementation/: block_chain_impl.cpp  blockchain_impl.cpp  organizer_impl.cpp  simple_chain_impl.cpp  validate_block_impl.cpp
src/interface/: block_chain.cpp  block_fetcher.cpp
src/leveldb/: leveldb_blockchain.cpp  leveldb_chain_keeper.cpp  leveldb_chain_keeper.hpp  leveldb_common.cpp  leveldb_common.hpp  leveldb_organizer.cpp  leveldb_organizer.hpp  leveldb_validate_block.cpp  leveldb_validate_block.hpp
src/organizers/: block_organizer.cpp  header_organizer.cpp  organize_block.cpp  organize_header.cpp  organize_transaction.cpp  transaction_organizer.cpp
src/pools/: anchor_converter.cpp  block_entry.cpp  block_graph.cpp  block_organizer.cpp  block_pool.cpp  branch.cpp  child_closure_calculator.cpp  conflicting_spend_remover.cpp  header_branch.cpp  header_entry.cpp  header_pool.cpp  organizer.cpp  orphan_pool.cpp  orphan_pool_manager.cpp  parent_closure_calculator.cpp  priority_calculator.cpp  stack_evaluator.cpp  transaction_entry.cpp  transaction_order_calculator.cpp  transaction_organizer.cpp  transaction_pool.cpp  transaction_pool_index.cpp  transaction_pool_state.cpp
src/pools/utilities/: anchor_converter.cpp  child_closure_calculator.cpp  conflicting_spend_remover.cpp  parent_closure_calculator.cpp  priority_calculator.cpp  stack_evaluator.cpp  transaction_order_calculator.cpp  transaction_pool_state.cpp
src/populate/: populate_base.cpp  populate_block.cpp  populate_chain_state.cpp  populate_header.cpp  populate_transaction.cpp
src/validate/: validate_block.cpp  validate_header.cpp  validate_input.cpp  validate_transaction.cpp
src/validation/: block_validator.cpp  fork.cpp  populate_block.cpp  validate_block.cpp  validate_input.cpp  validate_transaction.cpp
(+253 files in other folders)
