bitcoin_includedir = $(includedir)/bitcoin
bitcoin_include_HEADERS = \
    blockchain.hpp

bitcoin-blockchain_includedir = $(includedir)/bitcoin/blockchain
bitcoin-blockchain_include_HEADERS = \
    blockchain/define.hpp \
    blockchain/blockchain_impl.hpp \
    blockchain/db_interface.hpp \
    blockchain/organizer.hpp

bitcoin-blockchain_impl_includedir = $(includedir)/bitcoin/blockchain/impl
bitcoin-blockchain_impl_include_HEADERS = \
    blockchain/impl/disk_array.ipp \
    blockchain/impl/htdb_slab.ipp \
    blockchain/impl/htdb_slab_list_item.ipp \
    blockchain/impl/htdb_record.ipp \
    blockchain/impl/htdb_record_list_item.ipp \
    blockchain/impl/multimap_records.ipp \
    blockchain/impl/utility.ipp

bitcoin-blockchain_database_includedir = $(includedir)/bitcoin/blockchain/database
bitcoin-blockchain_database_include_HEADERS = \
    blockchain/database/history_scan_database.hpp \
    blockchain/database/hsdb_shard.hpp \
    blockchain/database/hsdb_settings.hpp \
    blockchain/database/types.hpp \
    blockchain/database/linked_records.hpp \
    blockchain/database/utility.hpp \
    blockchain/database/stealth_database.hpp \
    blockchain/database/slab_allocator.hpp \
    blockchain/database/record_allocator.hpp \
    blockchain/database/disk_array.hpp \
    blockchain/database/htdb_record.hpp \
    blockchain/database/multimap_records.hpp \
    blockchain/database/fsizes.hpp \
    blockchain/database/htdb_slab.hpp \
    blockchain/database/transaction_database.hpp \
    blockchain/database/spend_database.hpp \
    blockchain/database/history_database.hpp \
    blockchain/database/block_database.hpp

