bitcoin_includedir = $(includedir)/bitcoin
bitcoin_include_HEADERS = \
    blockchain.hpp

bitcoin_blockchain_includedir = $(includedir)/bitcoin/blockchain
bitcoin_blockchain_include_HEADERS = \
    blockchain/define.hpp \
    blockchain/blockchain.hpp \
    blockchain/transaction_pool.hpp \
    blockchain/validate.hpp

bitcoin_blockchain_database_includedir = $(includedir)/bitcoin/blockchain/database
bitcoin_blockchain_database_include_HEADERS = \
    blockchain/database/types.hpp
