bitcoin_includedir = $(includedir)/bitcoin
bitcoin_include_HEADERS = \
    blockchain.hpp

bitcoin_blockchain_includedir = $(includedir)/bitcoin/blockchain
bitcoin_blockchain_include_HEADERS = \
    blockchain/define.hpp \
    blockchain/blockchain.hpp \
    blockchain/transaction_pool.hpp \
    blockchain/validate.hpp

bitcoin_blockchain_database_includedir = $(includedir)/bitcoin/blockchain/database
bitcoin_blockchain_database_include_HEADERS = \
    blockchain/database/history_scan_database.hpp \
    blockchain/database/hsdb_shard.hpp \
    blockchain/database/hsdb_settings.hpp \
    blockchain/database/types.hpp \
    blockchain/database/linked_records.hpp \
    blockchain/database/utility.hpp \
    blockchain/database/stealth_database.hpp \
    blockchain/database/slab_allocator.hpp \
    blockchain/database/record_allocator.hpp \
    blockchain/database/disk_array.hpp \
    blockchain/database/htdb_record.hpp \
    blockchain/database/multimap_records.hpp \
    blockchain/database/fsizes.hpp \
    blockchain/database/mmfile.hpp \
    blockchain/database/htdb_slab.hpp \
    blockchain/database/transaction_database.hpp \
    blockchain/database/spend_database.hpp \
    blockchain/database/history_database.hpp \
    blockchain/database/block_database.hpp

